# The-New-Pong

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  ai.cpp  ai.hpp  ball_base.cpp  ball_base.hpp  classic_ball.cpp  classic_ball.hpp  game.cpp  game.hpp  game_over.cpp  game_over.hpp  game_save.cpp  game_save.hpp  gui.cpp  gui.hpp  inverse_power.cpp  inverse_power.hpp  invisible_power.cpp  invisible_power.hpp  letter.cpp  letter.hpp  macros.hpp  main.cpp  network.cpp  network.hpp  paddle.cpp  paddle.hpp  page_2b_1t.cpp  page_2b_1t.hpp  page_3b.cpp  page_3b.hpp  page_3b_0t.cpp  page_3b_0t.hpp  page_3b_1t.cpp  page_3b_1t.hpp  page_4b_1t.cpp  (+14 more)
UML Diagrams/uml/: ai.plantuml  balls.plantuml  dependencies.plantuml  letter.plantuml  paddle.plantuml  pages.plantuml  powers.plantuml  save.plantuml  sound.plantuml  user.plantuml
tests/: CMakeLists.txt  ball_test.cpp  letter_test.cpp  paddle_test.cpp  user_test.cpp
